[CXF-8151] Upgrade to Bean Validation 2.x and Hibernate Validator 6.1.0

--- a/integration/spring-boot/starter-jaxrs/pom.xml
+++ b/integration/spring-boot/starter-jaxrs/pom.xml
@@ -75,8 +75,8 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
         </dependency>
     </dependencies>
 </project>
