--- a/systests/jaxrs/pom.xml
+++ b/systests/jaxrs/pom.xml
@@ -41,8 +41,8 @@
             <version>${cxf.javassist.version}</version>
         </dependency>        
         <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
